--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,33 @@
 </head>
 <body>
     <h1>Welcome to My Flask Blog!</h1>
-
-    {% for c in posts %}
+    <a href="{{ url_for('add') }}" class="add-link">➕ Add New Post</a>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li style="color: green;">{{ message }}</li>
+        {% endfor %}
+    </ul>
+        {% endif %}
+        {% endwith %}
+    {% for post in posts %}
     <div class="post">
-       <h2>{{c["title"]}}</h2>
-       <p><em>Written by {{c["author"]}}</em></p>
-       <p>{{c["content"]}}</p>
+       <h2>{{post.title}}</h2>
+       <p><em>Written by {{post.author}}</em></p>
+       <p>{{post.content}}</p>
+
+        <form action="{{ url_for('delete', post_id=post['id']) }}"
+              method="POST" style="display:inline;"
+              onsubmit="return confirm('Delete this post?');"
+              style="display:inline;">
+        <button type="submit">Delete</button>
+        </form>
+        <form action="{{ url_for('update', post_id=post['id']) }}"
+              method="GET"
+              style="display:inline;">
+        <button type="submit">Update</button>
+        </form>
     </div>
     {% endfor %}
 
